<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">winstar</string>
    <string name="centigrade"><xliff:g id="value">%1$.2f</xliff:g>℃</string>
    <string name="fahrenheit"><xliff:g id="value">%1$.2f</xliff:g>℉</string>

    <string name="login">登录</string>
    <string name="account_hint">请输入帐号</string>
    <string name="password_hint">请输入6~8位密码</string>
    <string name="home">主页</string>
    <string name="register">注册</string>
    <string name="experience">体验</string>
    <string name="measure_now">实时测量</string>
    <string name="measure_accurate">精确测量</string>
    <string name="is_reading">正在读取</string>
    <string name="reset">复位</string>
    <string name="max">Max:</string>
    <string name="min">Min:</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="ble_not_supported">BLE is not supported</string>
    <string name="label_data">Data:</string>
    <string name="label_device_address">Device address:</string>
    <string name="label_state">State:</string>
    <string name="no_data">No data</string>
    <string name="connected">Connected</string>
    <string name="disconnected">Disconnected</string>
    <string name="title_devices">BLE Device Scan</string>
    <string name="error_bluetooth_not_supported">Bluetooth not supported.</string>

    <string name="unknown_device">Unknown device</string>
    <string name="unknown_characteristic">Unknown characteristic</string>
    <string name="unknown_service">Unknown service</string>

    <!-- Menu items -->
    <string name="menu_connect">Connect</string>
    <string name="menu_disconnect">Disconnect</string>
    <string name="menu_scan">Scan</string>
    <string name="menu_stop">Stop</string>

    <string name="intro_message">
        <![CDATA[


            This sample demonstrates how to use the Bluetooth LE Generic Attribute Profile (GATT)
            to transmit arbitrary data between devices.


        ]]>
    </string>

</resources>
